Fix absolute positioning in views_slideshow. Was causing containing divs to collapse

--- a/themes/accuray/css/pages.css
+++ b/themes/accuray/css/pages.css
@@ -409,7 +409,7 @@ ul.links li {
   float: left;
   width: 100%;
   margin-right: -100%;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .background-content img {
