--- a/themes/accuray/css/views-styles.css
+++ b/themes/accuray/css/views-styles.css
@@ -49,8 +49,8 @@
   clear: left;
 }
 
-.view-id-Slideshow .view-content {
-  position: relative;
+.views_slideshow_singleframe_slide {
+  position: relative !important; /* in IE, the absolute positioning provided by the module caused containing divs to collapse */
 }
 
 .views_slideshow_singleframe_pager {
